[gd_scene load_steps=2 format=3 uid="uid://b8h4x60a02w3v"]

[ext_resource type="Script" uid="uid://dlov3sskx3m7k" path="res://Online/MenuOnline.gd" id="1_menu_online"]

[node name="MenuOnline" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_online")

[node name="Fondo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.243137, 0.313726, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TituloOnline" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "üåê MULTIJUGADOR ONLINE"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EstadoConexion" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "üî¥ Desconectado"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelInstrucciones" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "üí° Para jugar multijugador necesitas iniciar el servidor primero,
luego abrir el cliente para conectarte o que otros se conecten"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionServidor" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelServidor" type="Label" parent="VBoxContainer/SectionServidor"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üñ•Ô∏è SERVIDOR"
horizontal_alignment = 1

[node name="BotonServidor" type="Button" parent="VBoxContainer/SectionServidor"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "üñ•Ô∏è Iniciar Servidor"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SectionCliente" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelCliente" type="Label" parent="VBoxContainer/SectionCliente"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "üë§ CLIENTE"
horizontal_alignment = 1

[node name="BotonCliente" type="Button" parent="VBoxContainer/SectionCliente"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "üë§ Conectar como Cliente"

[node name="HSeparator5" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Botones" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BotonVolver" type="Button" parent="VBoxContainer/Botones"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üîô Volver"
